<resources>
    <string name="app_name">Ibu Bahagia</string>
    <string name="app_description">Panduan Kesehatan Mental dan Pencegahan Depresi Pasca Melahirkan bagi Calon Ibu</string>
    <string name="nav_masuk">Masuk</string>
    <string name="nav_start">Mulai</string>
    <string name="nav_prev">Kembali</string>
    <string name="nav_next">Berikutnya</string>
    <string name="nav_home">Kembali ke Beranda</string>
    <string name="label_home">Beranda</string>
    <string name="uni_bullet">\u2022</string>
    <string name="opt_ok">OK</string>
    <string name="main_sambutan">Hai saya Gia!\nSelamat datang di aplikasi ibu bahagia.\nYuk kita mulai!</string>
    <string name="menu_item_0">Pengenalan Tokoh</string>
    <string name="menu_item_1">Kebutuhan Kehamilan</string>
    <string name="menu_item_2">Apa itu DPM</string>
    <string name="menu_item_3">Tips Mencegah DPM</string>
    <string name="menu_item_4">Cek Keadaanmu</string>
    <string name="menu_item_5">Bantuan</string>
    <string name="menu_item_sub_1">Informasi kebutuhan kehamilan</string>
    <string name="menu_item_sub_2">Memahami keadaan psikologis yang terjadi setelah melahirkan</string>
    <string name="menu_item_sub_3">Faktor resiko munculnya DPM dan tips menguranginya</string>
    <string name="menu_item_sub_4">Pengecekan dasar yang bunda alami terkait faktor resiko DPM</string>
    <string name="menu_item_sub_5">Kontak Biro dan Layanan Psikologis</string>
    <string name="konten_intro">Halo bunda semua,\n\nSaya <b>Gia</b>, saya adalah seorang ibu dan calon psikolog yang ingin membagi pengalaman dan pengetahuan mengenai kesehatan mental dan pencegahan depresi pasca melahirkan bagi calon ibu melalui aplikasi <b>IBU BAHAGIA</b>.</string>
    <string name="konten_kk_intro_1">Selamat atas kehamilannya!</string>
    <string name="konten_kk_intro_2">Yuk kita lihat hal yang harus bunda persiapkan selama masa kehamilan</string>
    <string name="konten_kk_first">Kesehatan Fisik Ibu</string>
    <string name="konten_kk_first_poin_1">Kehamilan tentu memunculkan <i>mix feeling</i> di dalam diri. Walaupun begitu bunda tetap harus memperhatikan kesehatan fisik dengan baik ya. Berikut hal – hal yang bisa bunda lakukan untuk menjaga kesehatan fisik</string>
    <string name="konten_kk_first_poin_2">Makan makanan bergizi</string>
    <string name="konten_kk_first_poin_3">Olahraga yang cukup</string>
    <string name="konten_kk_first_poin_4">Minum suplemen yang disarankan dokter</string>
    <string name="konten_kk_first_poin_5">Memeriksakan diri dan kandungan secara teratur di Bidan/Dokter Kandungan</string>
    <string name="konten_kk_second">Kebutuhan Selama Hamil dan Melahirkan</string>
    <string name="konten_kk_second_poin_1">Jangan lupa mempersiapkan benda – benda yang penting untuk bunda selama masa kehamilan:</string>
    <string name="konten_kk_second_poin_2">Pakaian hamil</string>
    <string name="konten_kk_second_poin_3">Peralatan tidur</string>
    <string name="konten_kk_second_poin_4">Perlengkapan hiburan (musik, buku, dll)</string>
    <string name="konten_kk_second_poin_5">Kebutuhan yang disarankan oleh dokter/bidan</string>
    <string name="konten_kk_second_poin_6">Jangan lupa, bunda juga bisa menyicil kebutuhan bunda &amp; bayi setelah melahirkan:</string>
    <string name="konten_kk_second_poin_7">Rumah sakit/Puskesmas untuk melahirkan</string>
    <string name="konten_kk_second_poin_8">Kebutuhan bayi (pakaian, popok, selimut, dll)</string>
    <string name="konten_kk_second_poin_9">Kebutuhan ibu (pakaian melahirkan, pakaian menyusui, pompa asi,dll)</string>
    <string name="konten_kk_third">Informasi Perkembangan Bayi</string>
    <string name="konten_kk_third_poin_1">Hal lain yang bunda bisa persiapkan selama masa kehamilan</string>
    <string name="konten_kk_third_poin_2">Cari tahu informasi seputar tumbuh kembang janin</string>
    <string name="konten_kk_third_poin_3">Cari tahu informasi cara merawat bayi</string>
    <string name="konten_kk_third_poin_4">Informasi di atas bisa bunda dapatkan dari dokter kandungan/bidan, mengikuti kelas, maupun online.</string>
    <string name="konten_aid_intro_1">Hi Bunda,\n\nGia mau cerita pengalaman Gia ketika punya anak pertama, Nana.\n\nPasca melahirkan Nana, Gia hampir tiap malam harus begadang menemani Nana yang terbangun tiap beberapa jam. Belum lagi ketika siang, banyak pekerjaan rumah yang harus dikerjakan.\n\nBeberapa hari pasca melahirkan terkadang Gia menangis sendirian, apalagi ketika seharian Nana menangis. Gia bingung mengapa Nana menangis sepanjang hari. Gia juga mulai menjauhi cermin. Gia tidak suka melihat tampilan diri Gia di cermin tersebut. Hingga puncaknya pada hari ke 7 Gia tidak tahan lagi dan ikut menangis ketika Nana menangis.\n\nGia akhirnya menghubungi psikolog untuk bertanya. Beliau mengatakan kemungkinan Gia mengalami baby blues. Beliau mengatakan apabila tidak ditangani dengan baik maka keadaan ini akan berlanjut menjadi depresi pasca melahirkan.</string>
    <string name="konten_aid_intro_2">Mari kita cari tau yuk apa itu baby blues &amp; depresi pasca melahirkan.</string>
    <string name="konten_aid_first">Baby Blues</string>
    <string name="konten_aid_first_poin_1">Setelah melahirkan, sebagian besar ibu mengalami perubahan emosi menjadi tidak stabil. Mereka menjadi lebih sering menangis, lebih sensitif, terlihat kebingungan dan muncul perasaan cemas. Keadaan ini berlangsung dalam rentang waktu  hingga 10 hari setelah melahirkan dan akan membaik dengan sendirinya dalam 2 minggu setelah kemunculan pertama.</string>
    <string name="konten_aid_first_poin_2">Tanda: Sering menangis, lebih sensitif, terlihat kebingungan dan munculnya perasaan cemas</string>
    <string name="konten_aid_first_poin_3">Dialami oleh sebagian besar ibu dalam rentang waktu 10 hari setelah melahirkan</string>
    <string name="konten_aid_first_poin_4">Jika dapat ditangani dengan baik maka keadaan ibu akan membaik</string>
    <string name="konten_aid_second">Depresi Pasca Melahirkan (DPM)</string>
    <string name="konten_aid_second_poin_1">Apabila setelah 2 minggu setelah melahirkan, bunda masih merasakan perasaan sedih berkepanjangan, merasa kosong, mudah lelah, sulit tidur, dan tidak nafsu makan sebaiknya bunda segera mencari bantuan. Apabila bunda merasa tidak mencintai atau tidak peduli kepada bayi bunda, bunda mungkin mengalami <b>depresi pasca melahirkan</b> atau yang sering disebut juga <b><i>postpartum depression</i></b>. Tapi tenang saja, bantuan profesional menggunakan terapi akan membantu bunda untuk mengatasinya.</string>
    <string name="konten_aid_second_poin_2">Tanda: Sering merasa sedih, kosong, tidak berdaya kelelahan, sulit tidur, tidak minat beraktifitas, tidak nafsu makan, sulit konsentrasi, merasa tidak bisa menjadi ibu yang baik, ada keinginan menyakiti diri / bunuh diri</string>
    <string name="konten_aid_epilog">Kenali faktor resikonya pada menu Tips mencegah DPM\nApabila ibu mengalami tanda diatas silahkan hubungi profesional pada menu Bantuan</string>
    <string name="konten_tmd_intro">Hi bunda!\n\nGia akan memberikan tips yang bunda bisa lakukan untuk mencegah munculnya DPM</string>
    <string name="konten_tmd_first">Memperhatikan faktor biologis dan fisik</string>
    <string name="konten_tmd_first_poin_1">Faktor hormonal ternyata merupakan salah satu penyebab munculnya depresi pasca melahirkan. Sehingga ada baiknya apabila ibu melakukan pemeriksaan rutin dan berkonsultasi dengan dokter setelah proses melahirkan dan selama proses penyembuhan ya.</string>
    <string name="konten_tmd_first_poin_2">Tahukah ibu, menurut penelitian yang dilakukan oleh Hahn-Holbrook et al, tahun 2013, menyusui anak dalam masa postpartum (6 minggu setelah melahirkan) merupakan salah satu hal yang bisa ibu lakukan untuk mengurangi kemungkinan munculnya depresi pasca melahirkan loh.</string>
    <string name="konten_tmd_second">Menjalin hubungan baik dengan pasangan</string>
    <string name="konten_tmd_second_poin_1">Bahagia atau tidaknya ibu dengan suami juga menjadi salah satu faktor penting untuk mengurangi resiko terkena DPM loh.\n\nJika pernikahan tidak bahagia atau hubungan pasangan kurang bahagia terdapat kecenderungan ibu mengalami DPM.\n\nOleh karena itu Gia sarankan untuk menjaga komunikasi dan hubungan yang baik dengan pasangan dengan cara saling mengkomunikasikan perasaan dan menyelesaikan masalah dengan diskusi bukan pertengkaran.</string>
    <string name="konten_tmd_third">Mengurangi paparan keadaan yang <i>stressful</i></string>
    <string name="konten_tmd_third_poin_1">Keadaan stress ternyata merupakan salah satu faktor yang menjadi faktor resiko munculnya depresi pasca melahirkan loh.\n\nContohnya: konflik dengan pasangan, lingkungan rumah atau kantor yang tidak nyaman, dll. Oleh karena itu Gia sarankan sebisa mungkin ibu menghindari keadaan yang bisa membuat ibu stress secara berlebihan.\n\nIbu juga bisa mempraktekan hal – hal berikut apabila terpapar keadaan yang membuat ibu stress</string>
    <string name="konten_tmd_third_poin_2">Berbagi masalah yang dihadapi dengan teman/keluarga</string>
    <string name="konten_tmd_third_poin_3">Melakukan olahraga</string>
    <string name="konten_tmd_third_poin_4">Melakukan relaksasi</string>
    <string name="konten_tmd_third_poin_5">Melakukan aktifitas yang disukai</string>
    <string name="konten_tmd_third_poin_6">Mencari bantuan professional</string>
    <string name="konten_tmd_third_poin_7">Berdoa/ mendekatkan diri pada Tuhan</string>
    <string name="konten_tmd_fourth">Mendapatkan dukungan dari orang lain</string>
    <string name="konten_tmd_fourth_poin_1">Ibu baru yang sedang mengalami masa transisi menjadi seorang ibu, membutuhkan bantuan dan dukungan sebelum &amp; selama kehamilan serta setelah kelahiran bayi dari orang lain.\nBentuk dukungan yang ibu bisa dapatkan bisa berupa:</string>
    <string name="konten_tmd_fourth_poin_2">Informasi seputar ibu dan anak</string>
    <string name="konten_tmd_fourth_poin_3">Dukungan emosional berupa kasih sayang, perhatian, semangat, penerimaan dan kepercayaan</string>
    <string name="konten_tmd_fourth_poin_4">Bantuan materil seperti bantuan tenaga &amp; finansial</string>
    <string name="konten_tmd_fourth_poin_5">Dimana ibu bisa mendapatkan dukungan diatas? Tidak lain dan tidak bukan adalah dari orang – orang disekitar ibu yaitu:</string>
    <string name="konten_tmd_fourth_poin_6">Orangtua</string>
    <string name="konten_tmd_fourth_poin_7">Pasangan</string>
    <string name="konten_tmd_fourth_poin_8">Saudara</string>
    <string name="konten_tmd_fourth_poin_9">Teman</string>
    <string name="konten_tmd_fourth_epilog">Yuk mari cek apakah bunda memiliki potensi mengalami depresi pasca melahirkan di menu Cek keadaanmu</string>
    <string name="konten_ck_intro">Mari cek kondisi anda.\nUntuk pertanyaan no 1–23, silahkan pilih satu jawaban yang paling sesuai dengan keadaan Anda.\nSilakan klik <b>\"MULAI\"</b> jika Anda sudah siap.</string>
    <string name="konten_ck_q_0">Informasi status pernikahan:</string>
    <string name="konten_ck_q_1">Saya hidup terpisah dari Ibu saya ketika saya masih anak-anak atau remaja:</string>
    <string name="konten_ck_q_2">Selama masa saya tumbuh dewasa, hubungan saya dengan ibu:</string>
    <string name="konten_ck_q_3">Saya yakin bahwa selama masa saya tumbuh dewasa, ibu saya:</string>
    <string name="konten_ck_q_4">Ketika saya tumbuh dewasa, jika saya membutuhkan bantuan atau nasehat, saya tahu bahwa saya dapat mengandalkan ayah saya:</string>
    <string name="konten_ck_q_5">Selama masa saya tumbuh dewasa, saya merasa bahwa saya adalah anggota keluarga yang berharga dan penting:</string>
    <string name="help_item_2">Nama Klinik</string>
    <string name="help_item_3">Alamat</string>
    <string name="help_item_4">No. Telp</string>
    <string name="help_item_5">Email / Web</string>
    <string name="help_item_6">Spesialisasi</string>
</resources>