<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:text="@string/konten_tmd_fourth"
                style="@style/Subtitle2FontStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/konten1"/>
            <TextView
                android:id="@+id/konten1"
                android:text="@string/konten_tmd_fourth_poin_1"
                android:textSize="@dimen/font_size_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toTopOf="@id/konten2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TableLayout
                android:id="@+id/konten2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/konten1"
                app:layout_constraintBottom_toTopOf="@id/konten3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TableRow android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:textAlignment="center"
                        android:textSize="@dimen/font_size_3"
                        android:text="@string/uni_bullet"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.9"
                        android:textSize="@dimen/font_size_3"
                        android:text="@string/konten_tmd_fourth_poin_2"/>
                </TableRow>
                <TableRow android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:textAlignment="center"
                        android:textSize="@dimen/font_size_3"
                        android:text="@string/uni_bullet"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.9"
                        android:textSize="@dimen/font_size_3"
                        android:text="@string/konten_tmd_fourth_poin_3"/>
                </TableRow>
                <TableRow android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:textAlignment="center"
                        android:textSize="@dimen/font_size_3"
                        android:text="@string/uni_bullet"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.9"
                        android:textSize="@dimen/font_size_3"
                        android:text="@string/konten_tmd_fourth_poin_4"/>
                </TableRow>
            </TableLayout>
            <TextView
                android:id="@+id/konten3"
                android:text="@string/konten_tmd_fourth_poin_5"
                android:layout_marginHorizontal="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_3"
                app:layout_constraintTop_toBottomOf="@id/konten2"
                app:layout_constraintBottom_toTopOf="@id/konten4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <View
                android:id="@+id/konten4"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/konten3"
                app:layout_constraintBottom_toTopOf="@id/konten5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/konten4sub1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="20dp"
                android:layout_marginHorizontal="3dp"
                android:text="@string/konten_tmd_fourth_poin_6"
                android:gravity="center"
                android:background="@drawable/petal"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform"
                app:layout_constraintTop_toTopOf="@id/konten4"
                app:layout_constraintBottom_toBottomOf="@id/konten4"
                app:layout_constraintStart_toStartOf="@id/konten4"
                app:layout_constraintEnd_toStartOf="@id/konten4sub2"/>
            <TextView
                android:id="@+id/konten4sub2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="20dp"
                android:layout_marginHorizontal="3dp"
                android:text="@string/konten_tmd_fourth_poin_7"
                android:gravity="center"
                android:background="@drawable/petal"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform"
                app:layout_constraintTop_toTopOf="@id/konten4"
                app:layout_constraintBottom_toBottomOf="@id/konten4"
                app:layout_constraintStart_toEndOf="@id/konten4sub1"
                app:layout_constraintEnd_toStartOf="@id/konten4sub3"/>
            <TextView
                android:id="@+id/konten4sub3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="20dp"
                android:layout_marginHorizontal="3dp"
                android:text="@string/konten_tmd_fourth_poin_8"
                android:gravity="center"
                android:background="@drawable/petal"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform"
                app:layout_constraintTop_toTopOf="@id/konten4"
                app:layout_constraintBottom_toBottomOf="@id/konten4"
                app:layout_constraintStart_toEndOf="@id/konten4sub2"
                app:layout_constraintEnd_toStartOf="@id/konten4sub4"/>
            <TextView
                android:id="@+id/konten4sub4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="20dp"
                android:layout_marginHorizontal="3dp"
                android:text="@string/konten_tmd_fourth_poin_9"
                android:gravity="center"
                android:background="@drawable/petal"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform"
                app:layout_constraintTop_toTopOf="@id/konten4"
                app:layout_constraintBottom_toBottomOf="@id/konten4"
                app:layout_constraintStart_toEndOf="@id/konten4sub3"
                app:layout_constraintEnd_toEndOf="@id/konten4"/>
            <ImageView
                android:id="@+id/konten5"
                android:src="@drawable/pic10dina"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/konten4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>