<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_kontak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/nama_klinik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/help_item_2"
            android:textSize="@dimen/font_size_3"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/alamat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/alamat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/help_item_3"
            android:textSize="@dimen/font_size_2"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            app:layout_constraintTop_toBottomOf="@id/nama_klinik"
            app:layout_constraintBottom_toTopOf="@id/telepon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/telepon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/help_item_4"
            android:textSize="@dimen/font_size_1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            app:layout_constraintTop_toBottomOf="@id/alamat"
            app:layout_constraintBottom_toTopOf="@id/email_web"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/email_web"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/help_item_5"
            android:textSize="@dimen/font_size_1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            app:layout_constraintTop_toBottomOf="@id/telepon"
            app:layout_constraintBottom_toTopOf="@id/spesialisasi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/spesialisasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/help_item_6"
            android:textSize="@dimen/font_size_1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            app:layout_constraintTop_toBottomOf="@id/email_web"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>