<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/gambar"
            android:src="@drawable/pic3dina"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/purple_sub"
            android:paddingVertical="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scroll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="3"/>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:fillViewport="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            app:layout_constraintTop_toBottomOf="@id/gambar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="7">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/konten_kk_second"
                    style="@style/Subtitle2FontStyle"
                    app:layout_constraintBottom_toTopOf="@id/konten1"
                    app:layout_constraintEnd_toEndOf="@id/container"
                    app:layout_constraintStart_toStartOf="@id/container"
                    app:layout_constraintTop_toTopOf="@id/container"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed" />
                <TextView
                    android:id="@+id/konten1"
                    android:text="@string/konten_kk_second_poin_1"
                    android:textSize="@dimen/font_size_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintBottom_toTopOf="@id/bullet_konten1"
                    app:layout_constraintStart_toStartOf="@id/container"
                    app:layout_constraintEnd_toEndOf="@id/container"/>
                <TableLayout
                    android:id="@+id/bullet_konten1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    app:layout_constraintTop_toBottomOf="@id/konten1"
                    app:layout_constraintBottom_toTopOf="@id/konten2"
                    app:layout_constraintStart_toStartOf="@id/container"
                    app:layout_constraintEnd_toEndOf="@id/container">
                    <TableRow android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.1"
                            android:textAlignment="center"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/uni_bullet"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.9"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/konten_kk_second_poin_2"/>
                    </TableRow>
                    <TableRow android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.1"
                            android:textAlignment="center"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/uni_bullet"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.9"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/konten_kk_second_poin_3"/>
                    </TableRow>
                    <TableRow android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.1"
                            android:textAlignment="center"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/uni_bullet"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.9"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/konten_kk_second_poin_4"/>
                    </TableRow>
                    <TableRow android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.1"
                            android:textAlignment="center"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/uni_bullet"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.9"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/konten_kk_second_poin_5" />
                    </TableRow>
                </TableLayout>
                <TextView
                    android:id="@+id/konten2"
                    android:text="@string/konten_kk_second_poin_6"
                    android:textSize="@dimen/font_size_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/bullet_konten1"
                    app:layout_constraintBottom_toTopOf="@id/bullet_konten2"
                    app:layout_constraintStart_toStartOf="@id/container"
                    app:layout_constraintEnd_toEndOf="@id/container"/>
                <TableLayout
                    android:id="@+id/bullet_konten2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    app:layout_constraintTop_toBottomOf="@id/konten2"
                    app:layout_constraintBottom_toBottomOf="@id/container"
                    app:layout_constraintStart_toStartOf="@id/container"
                    app:layout_constraintEnd_toEndOf="@id/container">
                    <TableRow android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.1"
                            android:textAlignment="center"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/uni_bullet"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.9"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/konten_kk_second_poin_7"/>
                    </TableRow>
                    <TableRow android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.1"
                            android:textAlignment="center"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/uni_bullet"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.9"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/konten_kk_second_poin_8" />
                    </TableRow>
                    <TableRow android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.1"
                            android:textAlignment="center"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/uni_bullet"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.9"
                            android:textSize="@dimen/font_size_3"
                            android:text="@string/konten_kk_second_poin_9"/>
                    </TableRow>
                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>